--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/jasonw754/resume-through/issues"
   },
-  "homepage": "https://github.com/jasonw754/resume-through#readme"
+  "homepage": "https://github.com/jasonw754/resume-through#readme",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
+  },
+  "dependencies": {
+    "readable-stream": "^2.3.3",
+    "through2": "^2.0.3"
+  }
 }
