--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "readable-stream": "^2.3.3",
-    "through2": "^2.0.3"
+    "through2": "^2.0.3",
+    "uuid": "^3.1.0"
   }
 }
