--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mocha": "^4.0.1"
   },
   "dependencies": {
+    "mississippi": "^1.3.0",
     "readable-stream": "^2.3.3",
     "through2": "^2.0.3",
     "uuid": "^3.1.0"
