--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/jasonw754/resume-through#readme",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {
+    "jsonfile": "^4.0.0",
     "mississippi": "^1.3.0",
     "readable-stream": "^2.3.3",
     "through2": "^2.0.3",
